# vortex-core

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml  seed_sample_data.sql  vortex.toml
crates/vortex-accounting/: Cargo.toml  DESIGN.md
crates/vortex-accounting/docs/: MYINVOIS_NOTES.md
crates/vortex-accounting/migrations/001_accounting/: postgres.sql  postgres_down.sql
crates/vortex-accounting/migrations/002_accounting_documents/: postgres.sql  postgres_down.sql
crates/vortex-accounting/migrations/003_accounting_registry/: postgres.sql
crates/vortex-accounting/migrations/004_malaysian_tax/: postgres.sql
crates/vortex-accounting/migrations/005_einvoice/: postgres.sql
crates/vortex-accounting/migrations/006_multicurrency/: postgres.sql
crates/vortex-accounting/migrations/007_banking_arap/: postgres.sql
crates/vortex-accounting/migrations/008_dimensions_assets/: postgres.sql
crates/vortex-accounting/migrations/009_statements_close/: postgres.sql
crates/vortex-accounting/migrations/010_partner_accounts/: postgres.sql
crates/vortex-accounting/migrations/011_partner_banks/: postgres.sql
crates/vortex-accounting/migrations/012_bank_master/: postgres.sql
crates/vortex-accounting/migrations/013_classification_codes/: postgres.sql
crates/vortex-accounting/migrations/014_unpost/: postgres.sql
crates/vortex-accounting/migrations/015_line_product/: postgres.sql
crates/vortex-accounting/migrations/016_payment_terms/: postgres.sql
crates/vortex-accounting/migrations/017_scale_indexes/: postgres.sql
crates/vortex-accounting/src/: assets.rs  banking.rs  bnm.rs  closing.rs  currency.rs  doc_email.rs  documents.rs  handlers.rs  handlers_assets.rs  handlers_banking.rs  handlers_closing.rs  handlers_currency.rs  handlers_documents.rs  handlers_einvoice.rs  handlers_payment_terms.rs  handlers_tax.rs  lib.rs  model.rs  plugin.rs  recurring.rs  reports.rs  service.rs  tax.rs
crates/vortex-accounting/src/einvois/: client.rs  flow.rs  jobs.rs  mod.rs  ubl.rs
crates/vortex-accounting/tests/: lifecycle.rs  settlement.rs
crates/vortex-change/: Cargo.toml
crates/vortex-change/src/: handlers.rs  lib.rs  model.rs  plugin.rs  state_machine.rs
crates/vortex-change/tests/: pg_integration.rs
crates/vortex-chatter/: Cargo.toml
crates/vortex-chatter/src/: audit_bridge.rs  lib.rs  mention_parser.rs  service.rs  traits.rs
crates/vortex-cli/: Cargo.toml
crates/vortex-cli/src/: main.rs
crates/vortex-cli/static/: calendar.css  calendar.js  graph.css  graph.js  kanban.css  kanban.js  pivot.css  pivot.js  report-studio.css  report-studio.js  tailwind.css  theme-init.js  vortex.css  vortex.js
crates/vortex-cli/templates/: dashboard_standalone.html  db_manager.html  home_standalone.html  login_standalone.html  users_form.html  users_list.html
crates/vortex-contacts/: Cargo.toml
crates/vortex-contacts/src/: handlers.rs  lib.rs  model.rs  plugin.rs
crates/vortex-eam/: CLAUDE.md  Cargo.toml
crates/vortex-eam/src/: handlers.rs  lib.rs  module.rs  plugin.rs  ui.rs
crates/vortex-framework/: Cargo.toml
crates/vortex-framework/examples/: report_demo.rs
crates/vortex-framework/src/: antivirus.rs  api.rs  approval.rs  assembly.rs  audit_events.rs  audit_trail.rs  auth.rs  automation.rs  batch.rs  batch_admin.rs  blueprint.rs  captcha.rs  chatter.rs  computed_fields.rs  custom_fields.rs  dashboards.rs  duplicate.rs  files.rs  flash.rs  generate.rs  intake.rs  jobs.rs  lib.rs  mail.rs  menu.rs  mobile_auth.rs  pdf.rs  plugin.rs  print_layout.rs  qr.rs  record_panel.rs  registry.rs  report.css  report_jobs.rs  rules.rs  saved_views.rs  shell.rs  sidebar.rs  snapshot.rs  state.rs  (+6 more)
crates/vortex-framework/tests/: blueprint_policy.rs  duplicate_db.rs  intake_triage.rs  list_keyset.rs
crates/vortex-inventory/: Cargo.toml
crates/vortex-inventory/src/: handlers.rs  lib.rs  model.rs  plugin.rs  service.rs
crates/vortex-iwk/: Cargo.toml  README.md
crates/vortex-iwk/src/: billing.rs  gl.rs  handlers.rs  ledger.rs  lib.rs  model.rs  payment.rs  plugin.rs
crates/vortex-maintenance/: Cargo.toml
crates/vortex-maintenance/src/: handlers.rs  lib.rs  model.rs  plugin.rs
crates/vortex-module/: Cargo.toml
crates/vortex-module/src/: hooks.rs  inheritance.rs  lib.rs  loader.rs  manifest.rs  repository.rs
crates/vortex-orm/: Cargo.toml
crates/vortex-orm/src/: blueprint.rs  bulk.rs  cache.rs  connection.rs  field.rs  idempotency.rs  lib.rs  model.rs  model_impl.rs  pool_manager.rs  query.rs  registry.rs  registry_sync.rs  schema.rs  sequence.rs
crates/vortex-orm/tests/: blueprint_ddl.rs  record_cache.rs
crates/vortex-plugin-sdk/: Cargo.toml
crates/vortex-plugin-sdk/src/: lib.rs
crates/vortex-plugin-sdk/tests/: minimal_plugin.rs
crates/vortex-policy/: Cargo.toml
crates/vortex-policy/src/: entities.rs  error.rs  lib.rs  service.rs  store.rs
crates/vortex-policy/tests/: pg_integration.rs
crates/vortex-purchase/: Cargo.toml
crates/vortex-purchase/src/: handlers.rs  lib.rs  model.rs  plugin.rs
crates/vortex-recon/: Cargo.toml  README.md
crates/vortex-recon/src/: ai.rs  handlers.rs  ingest.rs  lib.rs  model.rs  plugin.rs
crates/vortex-sales/: Cargo.toml
crates/vortex-sales/src/: handlers.rs  lib.rs  model.rs  plugin.rs  richtext.rs
crates/vortex-security/: Cargo.toml
crates/vortex-security/src/: access.rs  audit.rs  auth.rs  controller.rs  crypto.rs  csv_loader.rs  domain.rs  lib.rs  mfa.rs  password.rs  rbac.rs  session.rs  signing.rs
crates/vortex-security/tests/: audit_worm.rs  pkcs11_softhsm.rs
crates/vortex-server/: Cargo.toml
crates/vortex-server/src/: api.rs  lib.rs  routes.rs  state.rs
crates/vortex-sesb-eam/: Cargo.toml
crates/vortex-sesb-eam/src/: lib.rs  plugin.rs  workflow.rs
crates/vortex-sesb-eam/tests/: division_boundary.rs  work_order_policy.rs
crates/vortex-workflow/: Cargo.toml
crates/vortex-workflow/src/: engine.rs  error.rs  instance.rs  lib.rs  machine.rs  store.rs
crates/vortex-workflow/tests/: pg_integration.rs
tools/loadtest/: Cargo.toml  README.md  main.rs
(+510 files in other folders)
