[package]
name = "vortex-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "vortex"
path = "src/main.rs"

[dependencies]
vortex-common = { workspace = true }
vortex-orm = { workspace = true }
vortex-security = { workspace = true }
vortex-policy = { workspace = true }
vortex-workflow = { workspace = true }
vortex-module = { workspace = true }
vortex-framework = { workspace = true }
vortex-server = { workspace = true }
# vortex-eam is gated behind the `eam` feature so `cargo build
# --no-default-features` produces a core-only binary without the EAM
# plugin's API routes.
vortex-eam = { workspace = true, optional = true }
# vortex-change is gated behind the `cr` feature. The CR plugin is
# the Phase 0.5 demonstrator of the workflow + audit + policy +
# framework stack composed end-to-end.
vortex-change = { workspace = true, optional = true }

# Async
tokio = { workspace = true }

# Web (for demo server)
axum = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Config
config = { workspace = true }
dotenvy = { workspace = true }
toml = "0.8"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }

# Database
sqlx = { workspace = true }

# Security
argon2 = "0.5"
sha2 = "0.10"
rand = { workspace = true }
md5 = "0.7"

[features]
default = ["eam", "cr"]
# Pulls in the EAM plugin and registers its routes/menu entries.
# Omit to build a core-only `vortex` binary.
eam = ["dep:vortex-eam"]
# Pulls in the Change Request plugin — registers its state machine
# with the workflow engine and mounts its /change-requests/* routes.
cr = ["dep:vortex-change"]
