[package]
name = "vortex-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "vortex"
path = "src/main.rs"

[dependencies]
vortex-common = { workspace = true }
vortex-orm = { workspace = true }
vortex-security = { workspace = true }
vortex-policy = { workspace = true }
vortex-workflow = { workspace = true }
vortex-module = { workspace = true }
vortex-framework = { workspace = true }
vortex-server = { workspace = true }
# vortex-change is gated behind the `cr` feature. The CR plugin is
# the Phase 0.5 demonstrator of the workflow + audit + policy +
# framework stack composed end-to-end.
vortex-change = { workspace = true, optional = true }
# Contacts plugin — always enabled; it's the platform smoke-test
# vertical and the universal "res.partner" equivalent.
vortex-contacts = { workspace = true }
# Inventory plugin — a generic, always-on stock primitive (products,
# locations, double-entry moves, on-hand) that maintenance and
# procurement verticals build on.
vortex-inventory = { workspace = true }
vortex-accounting = { workspace = true }
# Purchasing plugin — composes the inventory primitive (receipts post
# stock moves). Always enabled.
vortex-purchase = { workspace = true }
# Maintenance / CMMS plugin — generic assets, work orders and plans;
# composes inventory (part consumption) + scheduler. Always enabled.
vortex-maintenance = { workspace = true }
# SESB EAM — electrical-utility asset-management vertical. Registered
# after inventory; owns the eam_* schema. Always enabled.
vortex-sesb-eam = { workspace = true }

# Async
tokio = { workspace = true }

# Web (for demo server)
axum = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Config
config = { workspace = true }
dotenvy = { workspace = true }
toml = "0.8"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }

# Database
sqlx = { workspace = true }

# Security
argon2 = "0.5"
sha2 = "0.10"
rand = { workspace = true }
md5 = "0.7"

[features]
default = ["cr"]
# Pulls in the Change Request plugin — registers its state machine
# with the workflow engine and mounts its /change-requests/* routes.
# Omit to build a core-only `vortex` binary.
cr = ["dep:vortex-change"]
# Enables the headless-Chromium PDF backend for report export (`?format=pdf`).
# Off by default — build with `--features pdf` and ship a Chromium binary.
pdf = ["vortex-framework/pdf-chromium"]
