[package]
name = "vortex-eam"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Enterprise Asset Management module for Vortex - Distribution Substation Asset Management"

[dependencies]
# Vortex core crates
vortex-common.workspace = true
vortex-macros = { path = "../vortex-macros" }
vortex-orm.workspace = true
vortex-module.workspace = true
vortex-security.workspace = true
vortex-framework.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true

# Logging
tracing.workspace = true

# Web framework (for handlers)
axum.workspace = true

# Utils
thiserror.workspace = true

[dev-dependencies]
tokio-test = "0.4"
