[package]
name = "vortex-framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# The framework crate is the binding layer between the module system
# (`vortex-module`) and the runtime binary (`vortex-cli`, `vortex-server`).
# It provides:
#
#   - `AppState` — the shared state every HTTP handler receives, moved out
#     of vortex-cli so plugins can depend on it without a circular dep.
#   - `Plugin` trait — what a plugin implements to contribute routes and
#     sidebar menu entries to the host binary.
#   - `MenuEntry` / `PluginRegistry` — the aggregation points the host
#     walks at startup to assemble the full router and sidebar.
#
# Plugin crates (vortex-change, vortex-contacts, etc.) depend on this
# crate to plug in. The host binary depends on this crate to consume
# installed plugins.

[dependencies]
vortex-common = { workspace = true }
vortex-orm = { workspace = true }
vortex-security = { workspace = true }
vortex-policy = { workspace = true }
vortex-workflow = { workspace = true }
vortex-module = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
qrcode = { workspace = true }
barcoders = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
lettre = { workspace = true }
reqwest = { workspace = true }
# OIDC ID-token (RS256) validation for identity federation — see federation/.
jsonwebtoken = { workspace = true }
# base64url for the signed OIDC state parameter.
base64 = "0.22"
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# Optional PDF backend: headless Chromium over the DevTools Protocol. Gated by
# the `pdf-chromium` feature so the default build pulls neither the crate nor a
# browser dependency. Needs a Chromium/Chrome binary at runtime.
chromiumoxide = { version = "0.7", optional = true, default-features = false, features = ["tokio-runtime"] }
futures = { version = "0.3", optional = true }

[features]
default = []
pdf-chromium = ["dep:chromiumoxide", "dep:futures"]
