[package]
name = "vortex-iwk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Iwk — a Vortex vertical plugin"

[dependencies]
vortex-plugin-sdk = { workspace = true }
# Direct deps required by `#[derive(Model)]`: the macro emits absolute
# `vortex_orm::` / `vortex_common::` paths (standard for derive macros, like
# depending on `serde` to use `#[derive(Serialize)]`). The `Model` derive is
# re-exported through `vortex_orm::prelude`.
vortex-orm = { workspace = true }
vortex-common = { workspace = true }
# GL integration: post summarized journals through the accounting service
# (subledger detail stays in iwk_bill; the ledger sees period totals).
vortex-accounting = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
