[package]
name = "vortex-policy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vortex-common = { workspace = true }

# Cedar authorization engine
cedar-policy = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Database (PolicyStore loads policies from Postgres)
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros", "test-util"] }
