[package]
name = "vortex-recon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Reconciliation — a Vortex vertical plugin"

[dependencies]
vortex-plugin-sdk = { workspace = true }
# Direct deps required by `#[derive(Model)]`: the macro emits absolute
# `vortex_orm::` / `vortex_common::` paths (standard for derive macros, like
# depending on `serde` to use `#[derive(Serialize)]`). The `Model` derive is
# re-exported through `vortex_orm::prelude`.
vortex-orm = { workspace = true }
vortex-common = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
# M3 ERP extract parsing (bulk pool import): CSV + Excel.
csv = { workspace = true }
calamine = { workspace = true }
# AI OCR extraction: outbound HTTPS to the configured provider + base64 payloads.
reqwest = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
russh = { workspace = true }
russh-sftp = { workspace = true }
suppaftp = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
tokio = { workspace = true }
