[package]
name = "vortex-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vortex-common = { workspace = true }
vortex-orm = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# CSV parsing for access control import/export
csv = "1.3"

# Regex for domain expression evaluation
regex = "1.10"

# Security & Crypto
argon2 = { workspace = true }
ring = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
