[package]
name = "vortex-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vortex-common = { workspace = true }
vortex-orm = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# CSV parsing for access control import/export
csv = "1.3"

# Regex for domain expression evaluation
regex = "1.10"

# Database — required for PgAuditStorage (WORM ledger backend)
sqlx = { workspace = true }

# Concurrency primitives for per-tenant audit writer tasks
dashmap = "6.1"

# Security & Crypto
argon2 = { workspace = true }
ring = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = "0.22"

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util", "macros"] }
