[package]
name = "vortex-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vortex-common = { workspace = true }
vortex-orm = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# CSV parsing for access control import/export
csv = "1.3"

# Regex for domain expression evaluation
regex = "1.10"

# Database — required for PgAuditStorage (WORM ledger backend)
sqlx = { workspace = true }

# Concurrency primitives for per-tenant audit writer tasks
dashmap = "6.1"

# Security & Crypto
argon2 = { workspace = true }
ring = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = "0.22"

# PKCS#11 v3.0 binding for HSM-backed audit signing. See
# signing/pkcs11.rs for usage. Works with SoftHSM2 in dev/CI and
# with real HSMs (Luna, nShield, YubiHSM 2, Utimaco) in production.
cryptoki = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Cloud key-provider backends (KMS / Vault) make a synchronous HTTPS
# round-trip via a thread-isolated blocking client. Optional so a deployment
# that never uses them pays no dependency cost — see keyprovider/.
reqwest = { workspace = true, optional = true, features = ["blocking"] }

[features]
default = []
# Wrap data keys with AWS KMS (hand-rolled SigV4, no aws-sdk-*).
aws-kms = ["dep:reqwest"]
# Wrap data keys with HashiCorp Vault / OpenBao Transit.
vault = ["dep:reqwest"]

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util", "macros"] }
# Temporary token directory for the SoftHSM2 integration test.
tempfile = "3.10"
